lambdacube-dsl/tests/accept/framebuffer03.lc
main =
    let frame = FrameBuffer (colorImage1 (V4F 0.0 0.0 0.4 1.0)
                            ,colorImage1 (V4F 1.0 1.0 1.0 1.0)
                            ,DepthImage #1 1.0
                            )
    in ScreenOut frame
