lambdacube-dsl/tests/reject/framebuffer01.lc
main =
    let frame = FrameBuffer (colorImage1 #2)
    in ScreenOut frame
